--- a/src/components/EventDetails.css
+++ b/src/components/EventDetails.css
@@ -1,5 +1,3 @@
-/* Event Details Section */
-
 @import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Jost:ital,wght@0,100..900;1,100..900&family=Cinzel:wght@400..900&family=Dancing+Script:wght@400..700&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap');
 
 :root {
@@ -37,7 +35,7 @@
   writing-mode: vertical-lr;
   text-orientation: sideways;
   transform: rotate(180deg);
-  font-size: 4.5rem;
+  font-size: 4.7rem;
   font-family: 'Cinzel', serif;
   color: var(--secondary-blue);
   font-weight: 300;
@@ -49,7 +47,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  gap: 4rem;
+  gap: 1.5rem;
   justify-content: end;
   align-items: center;
   font-family: 'Cinzel', serif;
@@ -57,7 +55,7 @@
 
 .date-title {
   font-family: 'Cinzel', serif;
-  font-size: 2rem;
+  font-size: 1.4rem;
   line-height: 1.5;
   color: var(--text-black);
   font-weight: 500;
@@ -65,11 +63,69 @@
 
 .date-text {
   font-family: 'Cinzel', serif;
-  font-size: 2.3rem;
+  font-size: 1.85rem;
   font-weight: 400;
   color: var(--primary-blue);
   line-height: 1.6;
 }
+
+.location{
+  display:block;
+}
+
+.add-to-calendar-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-family: 'Jost', sans-serif;
+  font-size: 1.4rem;
+  font-weight: 500;
+  color: white;
+  background: var(--primary-blue); /* Assuming you have this variable defined */
+  padding: 1rem 2rem;
+  border-radius: 0.5rem;
+  text-decoration: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Subtle shadow */
+  cursor: pointer; /* Indicates it's clickable */
+  border: none; /* Remove default button border */
+}
+
+.calendar-container {
+  position: relative;
+  display: inline-block;
+}
+
+.calendar-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  min-width: 200px;
+}
+
+.calendar-link {
+  display: block;
+  padding: 0.5rem 1rem;
+  text-decoration: none;
+  color: black;
+  border-bottom: 1px solid #ccc;
+}
+
+.calendar-link:last-child {
+  border-bottom: none;
+}
+
+.calendar-link:hover {
+  background-color: #f0f0f0;
+}
+
+
 
 .details-image {
   display: flex;
@@ -77,7 +133,7 @@
   align-items: center;
   position: relative;
   width: 35%;
-  height: 46rem;
+  height: 75rem;
 }
 
 .details-image img {
@@ -108,7 +164,7 @@
     flex-direction: row;
     gap: 3rem;
     justify-content: center;
-    margin-bottom: 4rem;
+    margin: 4rem 0;
     padding: 0 0.5rem;
   }
 
@@ -270,11 +326,11 @@
   }
 
   .date-title {
-    font-size: 1.3rem;
+    font-size: 1.1rem;
   }
 
   .date-text {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
   }
   .d-place {
     gap: 1rem;
